[project]
name = "gsfm"
version = "0.1.0"
description = "A foundation model trained on gene sets"
authors = [
  {name = "Daniel J. B. Clarke", email = "danieljbclarkemssm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.35.1",
    "lightning>=2.5.5",
    "safetensors>=0.6.2",
    "torch>=2.8.0",
    "xet>=1.3.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydeseq2>=0.5.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
